build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit/tests/TextUI/abstract-test-class.phpt.warn
WARNING:12:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:12:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'by'
WARNING:12:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Sebastian'
WARNING:12:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Bergmann'
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	integer '1'
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	(
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'There'
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'was'
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	integer '1'
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'warning'
WARNING:20:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
WARNING:21:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Cannot'
WARNING:21:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'instantiate'
WARNING:21:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	class
WARNING:21:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	String '"AbstractTest"'
WARNING:23:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	!
WARNING:24:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	\d
WARNING:24:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:24:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:25:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	End of File
